# Windows-Rust-Bluetooth-Manager

./: Cargo.toml  build.rs  readme.md
.github/workflows/: pr.yml  release.yml  rust.yml
src/: devices_menu.rs  main.rs  toggle_button.rs  version_info.rs
