[package]
name = "windows_rust_bluetooth_manager"
version = "0.1.0"
edition = "2024"

[dependencies]
tray-icon = "0.21.2"
winit = "0.28.0"
windows = { version = "0.52.0", features = ["Devices_Bluetooth", "Devices_Radios", "Foundation_Collections"] }
tokio = { version = "1", features = ["full"] }
image = "0.24.7"
