[package]
name = "windows_rust_bluetooth_manager"
version = "0.1.1"
edition = "2024"
repository = "https://github.com/Enweave/Windows-Rust-Bluetooth-Manager"

[dependencies]
tray-icon = "0.21.2"
winit = "0.28.0"
windows = { version = "0.52.0", features = ["Devices_Bluetooth", "Devices_Radios", "Foundation_Collections"] }
tokio = { version = "1", features = ["full"] }
image = "0.24.7"
webbrowser = "0.8.10"
toml = "0.8.8"

[build-dependencies]
winres = "0.1"
toml = "0.8.8"
